--- a/styles/notion.css
+++ b/styles/notion.css
@@ -38,7 +38,7 @@
   margin-bottom: 1em;
 }
 
-.notion-asset-wrapper-video > div,
+.notion-asset-wrapper-video>div,
 .notion-asset-wrapper-video video {
   width: 100% !important;
 }
@@ -56,7 +56,7 @@
 .notion-gallery-grid {
   grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   grid-gap: 6vmin;
-  gap: 6vmin;
+  gap: 5vmin;
 }
 
 .notion-gallery-grid .notion-page-icon-inline {
@@ -78,20 +78,20 @@
 }
 
 .notion-collection-card {
-  border-radius: 16px;
+  /* border-radius: 16px; */
   box-shadow: none;
 }
 
-.notion-collection-card-cover img {
+/* .notion-collection-card-cover img {
   border-radius: 16px;
-}
+} */
 
 .notion-collection-card {
   overflow: visible;
 }
 
 .notion-collection-card-cover {
-  border-radius: 16px;
+  /* border-radius: 16px; */
   box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
 }
 
@@ -111,6 +111,7 @@
 
 /* only target safari */
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
+
   _::-webkit-full-page-media,
   _:future,
   :root,
@@ -195,14 +196,16 @@
 .notion-page-cover-wrapper span,
 .notion-page-cover-wrapper img {
   max-width: 1200px !important;
-  border-radius: 24px;
+  /* border-radius: 24px; */
 }
 
+/* shadow effect to the page cover (notion page or "header" cover) */
 .notion-page-cover-wrapper {
-  box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
+  box-shadow: 2px 2px 8px 4px rgba(182, 46, 46, 0.1);
 }
 
 @media only screen and (max-width: 1200px) {
+
   .notion-page-cover-wrapper,
   .notion-page-cover-wrapper span,
   .notion-page-cover-wrapper img {
@@ -233,11 +236,12 @@
   background-size: 0 0.1rem;
 }
 
+/* gradient effect to the links */
 .notion-link:focus,
 .notion-link:hover {
   border-bottom-color: transparent;
 
-  background-image: linear-gradient(90.68deg, #b439df 0.26%, #e5337e 102.37%);
+  background-image: linear-gradient(90.68deg, #05040d 0.26%, #ff00ee 102.37%);
   background-repeat: no-repeat;
   background-position: 0 100%;
   background-size: 100% 0.1rem;
@@ -264,71 +268,59 @@
   background-color: none;
 
   /* light yellow */
-  background-image: linear-gradient(
-    119deg,
-    var(--bg-color),
-    #fff697 10.5%,
-    #fdf59d 85.29%,
-    var(--bg-color)
-  );
+  background-image: linear-gradient(119deg,
+      var(--bg-color),
+      #9e97ff 10.5%,
+      #fdf59d 85.29%,
+      var(--bg-color));
 }
 
 .notion-purple_background,
 .notion-pink_background {
   /* light pink */
-  background-image: linear-gradient(
-    119deg,
-    var(--bg-color),
-    #f5b8d1 10.5%,
-    #f9bcd3 85.29%,
-    var(--bg-color)
-  );
+  background-image: linear-gradient(119deg,
+      var(--bg-color),
+      #f5b8d1 10.5%,
+      #f9bcd3 85.29%,
+      var(--bg-color));
 }
 
 .notion-blue_background,
 .notion-gray_background {
   /* light blue */
-  background-image: linear-gradient(
-    119deg,
-    var(--bg-color),
-    #adedfc 10.5%,
-    #adebfd 85.29%,
-    var(--bg-color)
-  );
+  background-image: linear-gradient(119deg,
+      var(--bg-color),
+      #adedfc 10.5%,
+      #adebfd 85.29%,
+      var(--bg-color));
 }
 
 .notion-red_background,
 .notion-orange_background {
   /* light red */
-  background-image: linear-gradient(
-    119deg,
-    var(--bg-color),
-    #f5c4ff 10.5%,
-    #e7a8fc 85.29%,
-    var(--bg-color)
-  );
+  background-image: linear-gradient(119deg,
+      var(--bg-color),
+      #f5c4ff 10.5%,
+      #e7a8fc 85.29%,
+      var(--bg-color));
 }
 
 .notion-teal_background {
   /* light green */
-  background-image: linear-gradient(
-    119deg,
-    var(--bg-color),
-    #d4eabc 10.5%,
-    #d2eabc 85.29%,
-    var(--bg-color)
-  );
+  background-image: linear-gradient(119deg,
+      var(--bg-color),
+      #d4eabc 10.5%,
+      #d2eabc 85.29%,
+      var(--bg-color));
 }
 
 .notion-brown_background {
   /* dark blue */
-  background-image: linear-gradient(
-    119deg,
-    var(--bg-color),
-    #96b8ec 10.5%,
-    #a6c3f0 85.29%,
-    var(--bg-color)
-  );
+  background-image: linear-gradient(119deg,
+      var(--bg-color),
+      #96b8ec 10.5%,
+      #a6c3f0 85.29%,
+      var(--bg-color));
 }
 
 /* disable highlighting in dark mode */
@@ -347,16 +339,18 @@
   background: none !important;
 }
 
-/* if you don't want rounded page icon images, remove this */
+/* if you don't want rounded page icon images (profile picture/avatar), remove this */
 .notion-page-icon-hero.notion-page-icon-image {
   border-radius: 50%;
   box-shadow: 0 8px 40px 0 rgb(0 0 0 / 21%);
 }
+
 .notion-page-icon-hero.notion-page-icon-image span,
 .notion-page-icon-hero.notion-page-icon-image img {
   border-radius: 50%;
 }
 
+/* if you want to add a blur effect to the top navigation bar, remove this */
 .notion-header {
   background: hsla(0, 0%, 100%, 0.8);
   backdrop-filter: saturate(180%) blur(16px);
@@ -400,6 +394,6 @@
   color: var(--fg-color-2);
 }
 
-.notion-equation.notion-equation-block{
+.notion-equation.notion-equation-block {
   align-items: center;
 }
