added dark mode toggle to header

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -78,20 +78,20 @@
 }
 
 .notion-collection-card {
-  /* border-radius: 16px; */
+  border-radius: 16px;
   box-shadow: none;
 }
 
-/* .notion-collection-card-cover img {
+.notion-collection-card-cover img {
   border-radius: 16px;
-} */
+}
 
 .notion-collection-card {
   overflow: visible;
 }
 
 .notion-collection-card-cover {
-  /* border-radius: 16px; */
+  border-radius: 16px;
   box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
 }
 
@@ -196,7 +196,7 @@
 .notion-page-cover-wrapper span,
 .notion-page-cover-wrapper img {
   max-width: 1200px !important;
-  /* border-radius: 24px; */
+  border-radius: 24px;
 }
 
 /* shadow effect to the page cover (notion page or "header" cover) */
