--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -133,7 +133,7 @@
   display: inline-flex;
   padding: 12px;
   margin-right: 1vw;
-  /* border-radius: 50%; */
+  border-radius: 50%;
   background: transparent;
   transition: all 250ms ease-out;
 }
